--- a/copy_file.yaml
+++ b/copy_file.yaml
@@ -3,6 +3,6 @@
   tasks:
     - name: Copy a file to remote server
       copy:
-        src: /tmp/sample.txt
+        src: sample1.txt
         dest: /tmp/
  
