--- a/patching.yaml
+++ b/patching.yaml
@@ -5,6 +5,6 @@
   tasks:
     - name: Copy a file to remote server
       dnf:
-        name: "*"
+        name: "bash-completion"
         state: latest
         disablerepo: kubernetes
