--- a/patching.yaml
+++ b/patching.yaml
@@ -5,11 +5,11 @@
   tasks:
     - name: Take prechecks
       copy:
-        src: /etc/{{ items }}
-        dest: /tmp/{{ items }}_bkp
+        src: {{ items }}
+        dest: /tmp
         with_items:
-          - fstab
-          - resolv.conf
+          - /etc/fstab
+          - /etc/resolv.conf
         remote_src: yes
     - name: Patch the server
       dnf:
