--- a/patching.yaml
+++ b/patching.yaml
@@ -13,7 +13,7 @@
         - resolv.conf
     - name: Patch the server
       dnf:
-        name: "*"
+        name: "kernel"
         state: latest
         disablerepo: kubernetes
     - name: find out whether reboot needed or not
