updated patching yaml

--- a/patching.yaml
+++ b/patching.yaml
@@ -17,7 +17,8 @@
         state: latest
         disablerepo: kubernetes
     - name: find out whether reboot needed or not
-      shell: needs-restarting -r >/dev/null
+      become: true
+      shell: needs-restarting -r
       register: result
       ignore_errors: yes
     - name: Reboot the system if it is needed
@@ -28,8 +29,8 @@
         async: 30
         poll: 0
         test_command: whoami
-      when: result.rc == 0
+      when: result.rc != 0
     - name: Pausing to allow server to shutdown and terminate our SSH connection
       pause: 
         seconds: 30
-      when: result.rc == 0
+      when: result.rc != 0
