--- a/patching.yaml
+++ b/patching.yaml
@@ -21,7 +21,7 @@
       shell: needs-restarting -r
       register: result
       ignore_errors: yes
-      failed_when: true
+      failed_when: false
       changed_when: result.rc != 0
       notify:
         - Reboot server
